# download-center

./: .gitignore  Justfile  RELEASE_NOTES  Readme.md  meson.build  meson.options  pyproject.toml  pyrightconfig.json
.github/: FUNDING.yml
data/: download-center  gresource.xml  meson.build  metainfo.xml  ru.katy248.download-center.desktop  ru.katy248.download-center.gresource.xml  ru.katy248.download-center.gschema.xml  ru.katy248.download-center.metainfo.xml.in  ru.red-soft.download-center.gschema.xml
download-center/: DocumentationRow.blp  DocumentationRow.py  DonationDialog.blp  DonationDialog.py  DownloadRow.blp  DownloadRow.py  DownloadsPage.blp  DownloadsPage.py  DownloadsView.blp  DownloadsView.py  FailedAuthPage.blp  FailedAuthPage.py  LoginPage.blp  LoginPage.py  LoginView.blp  LoginView.py  MainWindow.blp  MainWindow.py  SettingsDialog.blp  SettingsDialog.py  SettingsPage.blp  SettingsPage.py  __init__.py  __main__.py  actions.py  api.py  app.py  auth.py  config.py  meson.build  state.py  utils.py
po/: POTFILES  download-center.pot  meson.build  ru.po
